--- a/java/Dockerfile
+++ b/java/Dockerfile
@@ -15,7 +15,7 @@ RUN chown -R nobody:nobody /opt
 # RUN mkdir /app && chown -R appuser:appgroup /app
 
 # ADD --chown=nobody:nobody ./docker-entrypoint.sh /app
-COPY --chown=nobody:nobody --from=build ./target/*.jar /app/app.jar
+COPY --chown=nobody:nobody --from=build /app/target/*.jar /app/app.jar
 ADD --chown=nobody:nobody https://dtdg.co/latest-java-tracer /app/dd-java-agent.jar
 
 # 65534:65534
